--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "mongoose": "^9.1.1",
     "multer": "^2.0.2",
     "multer-storage-cloudinary": "^4.0.0",
-    "nodemailer": "^7.0.12"
+    "nodemailer": "^7.0.12",
+    "resend": "^6.7.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^3.0.0",
