--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "name": "marist-manager",
+  "version": "1.1.1",
+  "description": "Sistema de gestión de gastos",
   "packageManager": "yarn@4.9.2",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
